; ModuleID = '/home/carl/AnghaBench/ish/tests/manual/extr_qemu-test.c_test_enter.c'
source_filename = "/home/carl/AnghaBench/ish/tests/manual/extr_qemu-test.c_test_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"q\00", align 1
@uint64_t = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@uint16_t = common dso_local global i32 0, align 4
@uint32_t = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_enter() #0 {
  %1 = load i32, i32* @uint64_t, align 4
  %2 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %1, i32 0)
  %3 = load i32, i32* @uint64_t, align 4
  %4 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %3, i32 1)
  %5 = load i32, i32* @uint64_t, align 4
  %6 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %5, i32 2)
  %7 = load i32, i32* @uint64_t, align 4
  %8 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %7, i32 31)
  %9 = load i32, i32* @uint16_t, align 4
  %10 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %9, i32 0)
  %11 = load i32, i32* @uint16_t, align 4
  %12 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %11, i32 1)
  %13 = load i32, i32* @uint16_t, align 4
  %14 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %13, i32 2)
  %15 = load i32, i32* @uint16_t, align 4
  %16 = call i32 @TEST_ENTER(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %15, i32 31)
  ret void
}

declare dso_local i32 @TEST_ENTER(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
